# liber-drive

./: .gitignore  1.crt  1.key  Cargo.toml  liber-drive.code-workspace
.cargo/: config
back/: Cargo.toml
back/src/: album.rs  build.rs  gallery.rs  image_exif.rs  main.rs  main_service.rs  media_item.rs  media_processing.rs  media_scanner.rs  media_sender.rs  test.rs  util.rs
back/src/middlewares/: auth.rs  compress.rs  logger.rs  mod.rs
back/www/: index.js  viewer.js
front/: app1.vue  index.html  package-lock.json  package.json  tailwind.config.js
front-ng/: angular.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json
front-ng/ng-test/: README.md  package-lock.json  package.json
front-ng/src/: index.html  main.ts  styles.css
front-ng/src/app/: app.component.html  app.component.ts  app.config.ts  const.ts  file-grid.service.ts  file-item.ts  gcj.js  gps.service.ts  page.service.ts  util.ts
front-ng/src/app/album/: album.component.html  album.component.ts
front-ng/src/app/album-grid/: album-grid.component.html  album-grid.component.ts
front-ng/src/app/album-preview/: album-preview.component.html  album-preview.component.ts
front-ng/src/app/album-tbnl/: album-tbnl.component.html  album-tbnl.component.ts
front-ng/src/app/dir-item/: dir-item.component.html  dir-item.component.ts
front-ng/src/app/exif-display/: exif-display.component.html  exif-display.component.ts
front-ng/src/app/file-grid/: file-grid.component.html  file-grid.component.ts
front-ng/src/app/galleries-grid/: galleries-grid.component.html  galleries-grid.component.ts
front-ng/src/app/gallery/: gallery.component.html  gallery.component.ts  gallery.service.ts  gallery.ts
front-ng/src/app/gallery-grid/: gallery-grid.component.html  gallery-grid.component.ts
front-ng/src/app/gallery-item/: gallery-item.component.html  gallery-item.component.ts
front-ng/src/app/home/: home.component.html  home.component.ts
front-ng/src/app/home-life/: home-life.component.html  home-life.component.ts
front-ng/src/app/home-situ/: home-situ.component.html  home-situ.component.ts
front-ng/src/app/img-item/: img-item.component.html  (+1 more)
front/src/: App.vue  const.js  const.ts  main.js  main.ts  style.css  util.js  util.ts
front/src/components/: DirItem.vue  FileItem.ts  FileItem.vue  MediaItem.vue  file_item.js
src/: main.rs
www/: index.css  index.html  index.js  viewer.css  viewer.js
(+17 files in other folders)
