[package]
name = "liber-drive"
version = "0.6.8"
authors = ["calebxzhou"]
license = "MIT"
description = "web drive"
readme = "README.md"
repository = "https://github.com/calebxzhou/liber-drive"
edition = "2021"

[dependencies]
chrono = "0.4"
bytes-stream = "0.0.3"
tokio-util = "0.7.10"
tower-http = { version = "0.5.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rayon = "1.9.0"
clap = "2.33.0"
walkdir = "2.4.0"
time = "0.1.42"
flate2 = "1.0.11"
pretty-bytes = "0.2.2"
rand = "0.8.3"
url = "2.1.0"
kamadak-exif = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
fs_extra = "1.3.0"
webp = "0.2.6"
etag = "4.0.0"
serde_with = "3.7.0"
mp4 = "0.14.0"
libheif-sys = "2.1.1"
libheif-rs = "1.0.2"
serde_qs = "0.13.0"
axum = "0.7.5"
futures-util = "0.3.30"
[build-dependencies]
bindgen = "0.65.1"

[package.metadata.vcpkg]
dependencies = ["ffmpeg", "libheif"]
git = "https://github.com/microsoft/vcpkg"
tag = "2024.06.15"
